calculator.css
* {
  box-sizing: border-box;
}
.body {
  margin: 0;
  padding: 0;
}
.container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 90vh;
}
.calculator {
  display: flex;
  justify-content: center;
  flex-direction: column;
  border: 3px solid gray;
  width: 400px;
  border-radius: 20px;
}

.input {
  display: flex;
  flex-direction: row;
  height: 70px;
  padding-top: 15px;
  margin: 0px;
  font-size: 2.5rem;
  justify-content: flex-end;
  font-family: Arial, Helvetica, sans-serif;
  margin-right: 36px;
  font-weight: 100;
}

.buttons {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 400px;
  margin-bottom: 10px;
}

.btn {
  width: 70px;
  height: 70px;
  background-color: rgb(247, 217, 171);
  color: rgb(111, 55, 6);
  margin: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: Arial, Helvetica, sans-serif;
  border-radius: 8px;
  font-size: 1em;
  cursor: pointer;
  border: 0.25px solid rgb(234, 190, 125);
}

.btn:hover {
  box-shadow: 0 0 7px #ec640f;
}

.btn:active {
  background-color: rgb(245, 202, 138);
}
.double-width {
  width: 156px;
}
.triple-width {
  width: 244px;
}
.number {
  font-weight: 600;
  background-color: rgb(239, 233, 233);
  color: black;
  border: 0.25px solid rgb(185, 183, 183);
}
.number:hover {
  box-shadow: 0 0 7px #4e4d4c;
}
.number:active {
  background-color: rgb(223, 221, 221);
}
.dot {
  font-size: 30px;
}

